--- a/index.html
+++ b/index.html
@@ -1,150 +1,169 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+      <meta name="author" content="Felipe Castro Richter" />
+      <title>El Diariooo</title>
 
-<head>
-    <meta charset="UTF-8">
-    <title>Desafio</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
+      <!-- Font Awesome -->
+      <script src="https://kit.fontawesome.com/0013c2e76c.js" crossorigin="anonymous"></script>
+      <!-- Site styles -->
+      <link rel="stylesheet" href="./assets/css/style.css" />
+    </head>
+  </head>
 
-<body>
+  <body>
     <div class="contenedor">
-        <div class="menu">
-            <div class="logo">Diario</div>
-            <div class="nav">
-                <ul>
-                    <li><a href="">Nosotros</a></li>
-                    <li><a href="">Contacto</a></li>
-                    <li><input class="input-menu" type="text" name="buscar" placeholder="buscar..." /></li>
-                </ul>
-            </div>
+      <!-- Contenedor -->
+      <div class="menu">
+        <div class="menu__logo">El Diariooo</div>
+        <div class="menu__nav">
+          <ul>
+            <li><a href="">Nosotros</a></li>
+            <li><a href="">Contacto</a></li>
+            <li><input class="menu__input-menu" type="text" name="buscar" placeholder="Buscar..." /></li>
+          </ul>
         </div>
-        <div class="contenido">
-            <div class="listad-noticias">
-                <div class="noticia">
-                    <div class="cabecera">
-                        <h2>
-                            Lorem ipsum dolor sit amet,
-                        </h2>
-                    </div>
-                    <div class="cuerpo">
-                        <img src="https://picsum.photos/200/300?random=1" />
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        </p>
-                    </div>
-                </div>
-                <div class="noticia">
-                    <div class="cabecera">
-                        <h2>
-                            Lorem ipsum dolor sit amet,
-                        </h2>
-                    </div>
-                    <div class="cuerpo">
-                        <img src="https://picsum.photos/200/300?random=2" />
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        </p>
-                    </div>
-                </div>
-                <div class="noticia">
-                    <div class="cabecera">
-                        <h2>
-                            Lorem ipsum dolor sit amet,
-                        </h2>
-                    </div>
-                    <div class="cuerpo">
-                        <img src="https://picsum.photos/200/300?random=3" />
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        </p>
-                    </div>
-                </div>
-                <div class="noticia">
-                    <div class="cabecera">
-                        <h2>
-                            Lorem ipsum dolor sit amet,
-                        </h2>
-                    </div>
-                    <div class="cuerpo">
-                        <img src="https://picsum.photos/200/300?random=4" />
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        </p>
-                    </div>
-                </div>
-                <div class="noticia">
-                    <div class="cabecera">
-                        <h2>
-                            Lorem ipsum dolor sit amet,
-                        </h2>
-                    </div>
-                    <div class="cuerpo">
-                        <img src="https://picsum.photos/200/300?random=5" />
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        </p>
-                    </div>
-                </div>
-                <div class="noticia">
-                    <div class="cabecera">
-                        <h2>
-                            Lorem ipsum dolor sit amet,
-                        </h2>
-                    </div>
-                    <div class="cuerpo">
-                        <img src="https://picsum.photos/200/300?random=6" />
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="listado-izquierdo">
-                <div class="cabecera-listado">
-                    <h1>Nosotros </h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    </p>
-                </div>
-                <div class="tags">
-                    <h1>Tags </h1>
-                    <ul>
-                        <li>Viajes</li>
-                        <li>Noticias</li>
-                        <li>Comida</li>
-                    </ul>
-                </div>
-                <div class="noticias-destacadas">
-                    <h1>Destacados </h1>
-                    <div class="item">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <img src="https://picsum.photos/200/200?random=7" />
-                    </div>
-                    <div class="item">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <img src="https://picsum.photos/200/200?random=8" />
-                    </div>
-                    <div class="item">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <img src="https://picsum.photos/200/200?random=9" />
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="newsletter">
-            <h2>Lorem ipsum dolor sit amet</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
-            <div class="group">
-                <input type="text" name=""><button>Suscríbete</button>
-            </div>
-        </div>
-        <div class="footer">
-            <p>Todos los derechos reservados</p>
-        </div>
-    </div>
-</body>
+      </div>
 
+      <!-- Contenido -->
+      <div class="contenido">
+        <!-- Contenido: Listado Noticias -->
+        <div class="listado-noticias">
+          <div class="listado-noticias__noticia">
+            <div class="listado-noticias__cabecera">
+              <h2>
+                Lorem ipsum dolor sit amet,
+              </h2>
+            </div>
+            <div class="listado-noticias__cuerpo">
+              <img src="https://picsum.photos/200/300?random=1" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+          <div class="listado-noticias__noticia">
+            <div class="listado-noticias__cabecera">
+              <h2>
+                Lorem ipsum dolor sit amet,
+              </h2>
+            </div>
+            <div class="listado-noticias__cuerpo">
+              <img src="https://picsum.photos/200/300?random=2" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+          <div class="listado-noticias__noticia">
+            <div class="listado-noticias__cabecera">
+              <h2>
+                Lorem ipsum dolor sit amet,
+              </h2>
+            </div>
+            <div class="listado-noticias__cuerpo">
+              <img src="https://picsum.photos/200/300?random=3" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+          <div class="listado-noticias__noticia">
+            <div class="listado-noticias__cabecera">
+              <h2>
+                Lorem ipsum dolor sit amet,
+              </h2>
+            </div>
+            <div class="listado-noticias__cuerpo">
+              <img src="https://picsum.photos/200/300?random=4" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+          <div class="listado-noticias__noticia">
+            <div class="listado-noticias__cabecera">
+              <h2>
+                Lorem ipsum dolor sit amet,
+              </h2>
+            </div>
+            <div class="listado-noticias__cuerpo">
+              <img src="https://picsum.photos/200/300?random=5" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+          <div class="listado-noticias__noticia">
+            <div class="listado-noticias__cabecera">
+              <h2>
+                Lorem ipsum dolor sit amet,
+              </h2>
+            </div>
+            <div class="listado-noticias__cuerpo">
+              <img src="https://picsum.photos/200/300?random=6" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Contenido: Listado Lateral -->
+        <div class="listado-izquierdo">
+          <div class="listado-izquierdo__cabecera-listado">
+            <h1>Nosotros</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            </p>
+          </div>
+          <div class="listado-izquierdo__tags">
+            <h1>Tags</h1>
+            <ul>
+              <li>Viajes</li>
+              <li>Noticias</li>
+              <li>Comida</li>
+            </ul>
+          </div>
+          <div class="listado-izquierdo__noticias-destacadas">
+            <h1>Destacados</h1>
+            <div class="listado-izquierdo__item">
+              <h4>Lorem ipsum dolor sit amet.</h4>
+              <img src="https://picsum.photos/200/200?random=7" />
+            </div>
+            <div class="listado-izquierdo__item">
+              <h4>Lorem ipsum dolor sit amet.</h4>
+              <img src="https://picsum.photos/200/200?random=8" />
+            </div>
+            <div class="listado-izquierdo__item">
+              <h4>Lorem ipsum dolor sit amet.</h4>
+              <img src="https://picsum.photos/200/200?random=9" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Newsletter -->
+      <div class="newsletter">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+        <div class="newsletter__group">
+          <input type="text" name="" />
+          <button>Suscríbete</button>
+        </div>
+      </div>
+
+      <!-- Footer -->
+      <div class="footer">
+        <p>Todos los derechos reservados</p>
+      </div>
+    </div>
+
+    <!-- Site scripts -->
+    <script src="./assets/js/script.js"></script>
+  </body>
 </html>
