--- a/index.html
+++ b/index.html
@@ -1,113 +1,111 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-      <meta name="author" content="Felipe Castro Richter" />
-      <title>El Diariooo</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="author" content="Felipe Castro Richter" />
+    <title>El Diariooo</title>
 
-      <!-- Font Awesome -->
-      <script src="https://kit.fontawesome.com/0013c2e76c.js" crossorigin="anonymous"></script>
-      <!-- Site styles -->
-      <link rel="stylesheet" href="./assets/css/style.css" />
-    </head>
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/0013c2e76c.js" crossorigin="anonymous"></script>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Coda:800|Nova+Mono&display=swap" rel="stylesheet" />
+    <!-- Site styles -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
 
   <body>
-    <div class="contenedor">
-      <!-- Contenedor -->
-      <div class="menu">
-        <div class="menu__logo">El Diariooo</div>
-        <div class="menu__nav">
-          <ul>
-            <li><a href="">Nosotros</a></li>
-            <li><a href="">Contacto</a></li>
-            <li><input class="menu__input-menu" type="text" name="buscar" placeholder="Buscar..." /></li>
-          </ul>
-        </div>
+    <div class="menu">
+      <div class="menu__logo">El Diariooo</div>
+      <div class="menu__nav">
+        <ul>
+          <li><a href="">Nosotros</a></li>
+          <li><a href="">Contacto</a></li>
+          <li><input class="menu__input-menu" type="text" name="buscar" placeholder="BUSCAR..." /></li>
+        </ul>
       </div>
-
-      <!-- Contenido -->
+    </div>
+    <!-- Contenido -->
+    <div class="contenedor">
       <div class="contenido">
         <!-- Contenido: Listado Noticias -->
         <div class="listado-noticias">
           <div class="listado-noticias__noticia">
             <div class="listado-noticias__cabecera">
               <h2>
-                Lorem ipsum dolor sit amet,
+                Lorem ipsum dolor sit amet.
               </h2>
             </div>
             <div class="listado-noticias__cuerpo">
               <img src="https://picsum.photos/200/300?random=1" />
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing.
               </p>
             </div>
           </div>
           <div class="listado-noticias__noticia">
             <div class="listado-noticias__cabecera">
               <h2>
-                Lorem ipsum dolor sit amet,
+                Lorem ipsum dolor sit amet.
               </h2>
             </div>
             <div class="listado-noticias__cuerpo">
               <img src="https://picsum.photos/200/300?random=2" />
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing.
               </p>
             </div>
           </div>
           <div class="listado-noticias__noticia">
             <div class="listado-noticias__cabecera">
               <h2>
-                Lorem ipsum dolor sit amet,
+                Lorem ipsum dolor sit amet.
               </h2>
             </div>
             <div class="listado-noticias__cuerpo">
               <img src="https://picsum.photos/200/300?random=3" />
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing.
               </p>
             </div>
           </div>
           <div class="listado-noticias__noticia">
             <div class="listado-noticias__cabecera">
               <h2>
-                Lorem ipsum dolor sit amet,
+                Lorem ipsum dolor sit amet.
               </h2>
             </div>
             <div class="listado-noticias__cuerpo">
               <img src="https://picsum.photos/200/300?random=4" />
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing.
               </p>
             </div>
           </div>
           <div class="listado-noticias__noticia">
             <div class="listado-noticias__cabecera">
               <h2>
-                Lorem ipsum dolor sit amet,
+                Lorem ipsum dolor sit amet.
               </h2>
             </div>
             <div class="listado-noticias__cuerpo">
               <img src="https://picsum.photos/200/300?random=5" />
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing.
               </p>
             </div>
           </div>
           <div class="listado-noticias__noticia">
             <div class="listado-noticias__cabecera">
               <h2>
-                Lorem ipsum dolor sit amet,
+                Lorem ipsum dolor sit amet.
               </h2>
             </div>
             <div class="listado-noticias__cuerpo">
               <img src="https://picsum.photos/200/300?random=6" />
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing.
               </p>
             </div>
           </div>
@@ -146,21 +144,21 @@
           </div>
         </div>
       </div>
+    </div>
 
-      <!-- Newsletter -->
-      <div class="newsletter">
-        <h2>Lorem ipsum dolor sit amet</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
-        <div class="newsletter__group">
-          <input type="text" name="" />
-          <button>Suscríbete</button>
-        </div>
+    <!-- Newsletter -->
+    <div class="newsletter">
+      <h2>Lorem ipsum dolor sit amet</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+      <div class="newsletter__group">
+        <input class="newsletter__input" type="text" name="email" />
+        <button class="button">Suscríbete</button>
       </div>
+    </div>
 
-      <!-- Footer -->
-      <div class="footer">
-        <p>Todos los derechos reservados</p>
-      </div>
+    <!-- Footer -->
+    <div class="footer">
+      <p>Todos los derechos reservados</p>
     </div>
 
     <!-- Site scripts -->
